testing/tests/melt/positive/expr-stmt-types.c

struct foo {
  int *a;
  float * b;
  struct foo * c;
};


int main() {
  1;
  "hello";
  1.0;
  1L;
  1 + 1.0;
  1 / 1.0;
  
  struct foo bar;
  bar.a;
  bar.a = 0;
  bar.b;
  bar.c->c->c->c;
  
  main();

}
