testing/tests/melt/negative/lvalues_18.c

int main() 
{
    int n = 0--; // Decrement requires an lvalue
    return 0;
}
